--- a/Clash/Ruleset/Extra/Game/Epic.yaml
+++ b/Clash/Ruleset/Extra/Game/Epic.yaml
@@ -1,6 +1,14 @@
 payload:
-  # Epic
-  - DOMAIN-SUFFIX,epicgames.com
-  - DOMAIN-SUFFIX,helpshift.com
-  - DOMAIN-SUFFIX,paragon.com
-  - DOMAIN-SUFFIX,unrealengine.com
+  - "+.battlebreakers.com"
+  - "+.eac-cdn.com"
+  - "+.easy.ac"
+  - "+.easyanticheat.net"
+  - "+.epicgames.com"
+  - "+.fortnite.com"
+  - "+.paragon.com"
+  - "+.playparagon.com"
+  - "+.roborecall.com"
+  - "+.shadowcomplex.com"
+  - "+.spyjinx.com"
+  - "+.unrealengine.com"
+  - "+.unrealtournament.com"
