--- a/Clash/Ruleset/Extra/Game/Steam.yaml
+++ b/Clash/Ruleset/Extra/Game/Steam.yaml
@@ -1,16 +1,28 @@
 payload:
-  # Steam
-  - DOMAIN-SUFFIX,steam-chat.com
-  - DOMAIN-SUFFIX,steamcontent.com
-  - DOMAIN-SUFFIX,steamgames.com
-  - DOMAIN-SUFFIX,steampowered.com
-  - DOMAIN-SUFFIX,steamstat.us
-  - DOMAIN-SUFFIX,steamstatic.com
-  - DOMAIN-SUFFIX,steamusercontent.com
-  - DOMAIN,steambroadcast.akamaized.net
-  - DOMAIN,steamcdn-a.akamaihd.net
-  - DOMAIN,steamcommunity-a.akamaihd.net
-  - DOMAIN,steamstore-a.akamaihd.net
-  - DOMAIN,steamusercontent-a.akamaihd.net
-  - DOMAIN,steamusercontent-a.akamaihd.net
-  - DOMAIN,steamuserimages-a.akamaihd.net
+  - "+.csgo.wmsj.cn"
+  - "+.dl.steam.ksyna.com"
+  - "+.dota2.wmsj.cn"
+  - "+.playartifact.com"
+  - "+.s.team"
+  - "+.st.dl.bscstorage.net"
+  - "+.st.dl.eccdnx.com"
+  - "+.st.dl.pinyuncloud.com"
+  - "+.steam-chat.com"
+  - "+.steamcommunity.com"
+  - "+.steamcontent.com"
+  - "+.steamgames.com"
+  - "+.steampipe.steamcontent.tnkjmec.com"
+  - "+.steampowered.com"
+  - "+.steampowered.com.8686c.com"
+  - "+.steamstatic.com"
+  - "+.steamstatic.com.8686c.com"
+  - "+.steamusercontent.com"
+  - "+.underlords.com"
+  - "+.valvesoftware.com"
+  - "+.wmsjsteam.com"
+  - "steambroadcast.akamaized.net"
+  - "steamcdn-a.akamaihd.net"
+  - "steamcommunity-a.akamaihd.net"
+  - "steamstore-a.akamaihd.net"
+  - "steamusercontent-a.akamaihd.net"
+  - "steamuserimages-a.akamaihd.net"
