--- a/Clash/Ruleset/Extra/Game/Ubisoft.yaml
+++ b/Clash/Ruleset/Extra/Game/Ubisoft.yaml
@@ -1,7 +1,6 @@
 payload:
- - DOMAIN-SUFFIX,ubi.com
- - DOMAIN-SUFFIX,ubisoft.com
- - DOMAIN-SUFFIX,ubisoft-uplay-savegames.s3.amazonaws.com
- - DOMAIN-SUFFIX,ubisoft-orbit-savegames.s3.amazonaws.com
- - DOMAIN-SUFFIX,ubistatic3-a.akamaihd.net
- - DOMAIN-SUFFIX,ubisoft-avatars.akamaized.net
+  - "+.ubi.com"
+  - "+.ubisoft.com"
+  - "+.uplay.com"
+  - "ubisoft-orbit-savegames.s3.amazonaws.com"
+  - "ubisoft-uplay-savegames.s3.amazonaws.com"
