--- a/Clash/Ruleset/Extra/Speedtset.yaml
+++ b/Clash/Ruleset/Extra/Speedtset.yaml
@@ -1,6 +1,7 @@
 payload:
 # > Fast
  - DOMAIN-SUFFIX,fast.com
+ - DOMAIN-KEYWORD,steamcontent.com
 # > Speedtest by Ookla
  - DOMAIN-KEYWORD,speedtest
  - DOMAIN-SUFFIX,ooklaserver.net
