--- a/Clash/Ruleset/Extra/Game/Epic.yaml
+++ b/Clash/Ruleset/Extra/Game/Epic.yaml
@@ -1,14 +1,17 @@
 payload:
-  - "+.battlebreakers.com"
-  - "+.eac-cdn.com"
-  - "+.easy.ac"
-  - "+.easyanticheat.net"
-  - "+.epicgames.com"
-  - "+.fortnite.com"
-  - "+.paragon.com"
-  - "+.playparagon.com"
-  - "+.roborecall.com"
-  - "+.shadowcomplex.com"
-  - "+.spyjinx.com"
-  - "+.unrealengine.com"
-  - "+.unrealtournament.com"
+  - DOMAIN-SUFFIX,battlebreakers.com
+  - DOMAIN-SUFFIX,eac-cdn.com
+  - DOMAIN-SUFFIX,easy.ac
+  - DOMAIN-SUFFIX,easyanticheat.net
+  - DOMAIN-SUFFIX,epicgames.com
+  - DOMAIN-SUFFIX,epicgames.dev
+  - DOMAIN-SUFFIX,fortnite.com
+  - DOMAIN-SUFFIX,helpshift.com
+  - DOMAIN-SUFFIX,paragon.com
+  - DOMAIN-SUFFIX,playparagon.com
+  - DOMAIN-SUFFIX,roborecall.com
+  - DOMAIN-SUFFIX,shadowcomplex.com
+  - DOMAIN-SUFFIX,spyjinx.com
+  - DOMAIN-SUFFIX,unrealengine.com
+  - DOMAIN-SUFFIX,unrealtournament.com
+  - DOMAIN-KEYWORD,epicgames
