--- a/Clash/Ruleset/Extra/Game/Ubisoft.yaml
+++ b/Clash/Ruleset/Extra/Game/Ubisoft.yaml
@@ -1,6 +1,15 @@
 payload:
-  #- "+.ubi.com"
-  - "+.ubisoft.com"
-  - "+.uplay.com"
-  - "ubisoft-orbit-savegames.s3.amazonaws.com"
-  - "ubisoft-uplay-savegames.s3.amazonaws.com"
+  - DOMAIN,uplaypc-s-ubisoft.cdn.ubi.com
+  - DOMAIN-SUFFIX,ubi.com
+  - DOMAIN-SUFFIX,ubisoft-orbit-savegames.s3.amazonaws.com
+  - DOMAIN-SUFFIX,ubisoft-uplay-savegames.s3.amazonaws.com
+  - DOMAIN-SUFFIX,ubisoft.com
+  - DOMAIN-SUFFIX,uplay.com
+  - DOMAIN-SUFFIX,store.ubisoft.com
+  - DOMAIN-SUFFIX,public-ubiservices.ubi.com
+  - DOMAIN-SUFFIX,ubistatic-a.akamaihd.net
+  - DOMAIN-SUFFIX,ubistatic2-a.akamaihd.net
+  - DOMAIN-SUFFIX,ubistatic3-a.akamaihd.net
+  - DOMAIN-SUFFIX,ubisoft-avatars.akamaized.net
+  - DOMAIN-SUFFIX,ubisoftconnect.com
+
