--- a/Clash/Ruleset/Unbreak.yaml
+++ b/Clash/Ruleset/Unbreak.yaml
@@ -1,23 +1,42 @@
 payload:
-  # Unbreak
-  # > General
-  # USER-AGENT,archero*
-  # USER-AGENT,coffeecorp*
-  # USER-AGENT,Coffee%20Corp*
-  # USER-AGENT,restaurant-mobile*
-  - DOMAIN,app.adjust.com
-  # > Alibaba
-  - DOMAIN,log.mmstat.com
-  - DOMAIN,sycm.mmstat.com
-  # > Google
-  - DOMAIN-SUFFIX,googletraveladservices.com
+  # Epicgames
+  - DOMAIN-SUFFIX,ol.epicgames.com
+
+  # Getui
+  - DOMAIN-SUFFIX,dizhensubao.getui.com
+
+  # Google
   - DOMAIN,dl.google.com
-  - DOMAIN,mtalk.google.com
-  # > Tencent
+  - DOMAIN-SUFFIX,googletraveladservices.com
+
+  # Mozilla
+  - DOMAIN-SUFFIX,tracking-protection.cdn.mozilla.net
+
+  # Origin
+  - DOMAIN,origin-a.akamaihd.net
+
+  # Tencent
+  - DOMAIN,fairplay.l.qq.com
   - DOMAIN,livew.l.qq.com
   - DOMAIN,vd.l.qq.com
-  # > Strava
-  - DOMAIN,analytics.strava.com
-  # > Umeng
+
+  # Strava
+
+  # Umeng
+  - DOMAIN,errlog.umeng.com
   - DOMAIN,msg.umeng.com
   - DOMAIN,msg.umengcloud.com
+
+  # Miui 小米
+  - DOMAIN,tracking.miui.com
+
+  # General
+  - DOMAIN,app.adjust.com
+  - DOMAIN,bdtj.tagtic.cn
+
+  # Hypixel Network
+  - DOMAIN,rewards.hypixel.net
+
+  # Koodo Mobile
+  - DOMAIN-SUFFIX,koodomobile.com
+  - DOMAIN-SUFFIX,koodomobile.ca
