--- a/Clash/Ruleset/Extra/Game/Allinonedownload.yaml
+++ b/Clash/Ruleset/Extra/Game/Allinonedownload.yaml
@@ -12,3 +12,5 @@ payload:
 #origin游戏下载
   - DOMAIN,origin-a.akamaihd.net
   - DOMAIN-SUFFIX,ssl-lvlt.cdn.ea.com
+# uplay登录
+  - DOMAIN,public-ubiservices.ubi.com
