--- a/Clash/Ruleset/Extra/Game/Allinonedownload.yaml
+++ b/Clash/Ruleset/Extra/Game/Allinonedownload.yaml
@@ -14,3 +14,6 @@ payload:
   - DOMAIN-SUFFIX,ssl-lvlt.cdn.ea.com
 # uplay登录
   - DOMAIN,public-ubiservices.ubi.com
+#  - DOMAIN,dmx.upc.ubisoft.com
+  - DOMAIN,connect.ubisoft.com
+  - DOMAIN,connect.cdn.ubisoft.com
