--- a/Clash/Ruleset/China.yaml
+++ b/Clash/Ruleset/China.yaml
@@ -15,6 +15,7 @@ payload:
   - DOMAIN,www.libvideo.com
   - DOMAIN,www.yxssp.com
   - DOMAIN-SUFFIX,00cdn.com
+  - DOMAIN-SUFFIX,withal.fun
   - DOMAIN-SUFFIX,0123456789.com
   - DOMAIN-SUFFIX,0379home.com
   - DOMAIN-SUFFIX,055110.com
