--- a/Clash/Ruleset/China.yaml
+++ b/Clash/Ruleset/China.yaml
@@ -3721,3 +3721,6 @@ payload:
   - IP-CIDR6,2a0b:b581::/48,no-resolve
   - IP-CIDR6,2a0b:b582::/48,no-resolve
   - IP-CIDR6,2a0b:b583::/48,no-resolve
+  - DOMAIN-SUFFIX,jinritemai.com
+  - DOMAIN-SUFFIX,ugnas.com
+
